@@ -29,9 +29,49 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|FileInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|Iterator
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Properties
 import|;
 end_import
 
@@ -65,6 +105,60 @@ name|Path
 import|;
 end_import
 
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|Artifact
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|Ivy
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|ant
+operator|.
+name|IvyCacheTask
+operator|.
+name|PathEntry
+import|;
+end_import
+
+begin_import
+import|import
+name|fr
+operator|.
+name|jayasoft
+operator|.
+name|ivy
+operator|.
+name|filter
+operator|.
+name|Filter
+import|;
+end_import
+
 begin_class
 specifier|public
 class|class
@@ -76,6 +170,36 @@ specifier|private
 name|String
 name|_pathid
 decl_stmt|;
+specifier|private
+name|boolean
+name|useOrigin
+init|=
+literal|false
+decl_stmt|;
+specifier|public
+name|boolean
+name|isUseOrigin
+parameter_list|()
+block|{
+return|return
+name|useOrigin
+return|;
+block|}
+specifier|public
+name|void
+name|setUseOrigin
+parameter_list|(
+name|boolean
+name|useOrigin
+parameter_list|)
+block|{
+name|this
+operator|.
+name|useOrigin
+operator|=
+name|useOrigin
+expr_stmt|;
+block|}
 specifier|public
 name|String
 name|getPathid
@@ -177,17 +301,25 @@ argument_list|()
 condition|;
 control|)
 block|{
-name|String
+name|PathEntry
 name|p
 init|=
 operator|(
-name|String
+name|PathEntry
 operator|)
 name|iter
 operator|.
 name|next
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|p
+operator|.
+name|isRelativeToCache
+argument_list|()
+condition|)
+block|{
 name|path
 operator|.
 name|createPathElement
@@ -202,9 +334,33 @@ name|getCache
 argument_list|()
 argument_list|,
 name|p
+operator|.
+name|getLocation
+argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|path
+operator|.
+name|createPathElement
+argument_list|()
+operator|.
+name|setLocation
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|p
+operator|.
+name|getLocation
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 catch|catch
@@ -227,6 +383,197 @@ argument_list|,
 name|ex
 argument_list|)
 throw|;
+block|}
+block|}
+specifier|protected
+name|void
+name|addPath
+parameter_list|(
+name|List
+name|paths
+parameter_list|,
+name|Artifact
+name|artifact
+parameter_list|,
+name|Ivy
+name|ivy
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+operator|!
+name|useOrigin
+condition|)
+block|{
+name|paths
+operator|.
+name|add
+argument_list|(
+operator|new
+name|PathEntry
+argument_list|(
+name|ivy
+operator|.
+name|getArchivePathInCache
+argument_list|(
+name|artifact
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|File
+name|originFile
+init|=
+name|ivy
+operator|.
+name|getOriginFileInCache
+argument_list|(
+name|getCache
+argument_list|()
+argument_list|,
+name|artifact
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|originFile
+operator|.
+name|exists
+argument_list|()
+condition|)
+block|{
+name|paths
+operator|.
+name|add
+argument_list|(
+operator|new
+name|PathEntry
+argument_list|(
+name|ivy
+operator|.
+name|getArchivePathInCache
+argument_list|(
+name|artifact
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|Properties
+name|originProperties
+init|=
+operator|new
+name|Properties
+argument_list|()
+decl_stmt|;
+name|FileInputStream
+name|originInputStream
+init|=
+operator|new
+name|FileInputStream
+argument_list|(
+name|originFile
+argument_list|)
+decl_stmt|;
+try|try
+block|{
+name|originProperties
+operator|.
+name|load
+argument_list|(
+name|originInputStream
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|originInputStream
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+name|boolean
+name|isOriginLocal
+init|=
+name|Boolean
+operator|.
+name|valueOf
+argument_list|(
+name|originProperties
+operator|.
+name|getProperty
+argument_list|(
+literal|"isLocal"
+argument_list|)
+argument_list|)
+operator|.
+name|booleanValue
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|isOriginLocal
+condition|)
+block|{
+name|String
+name|originName
+init|=
+name|originProperties
+operator|.
+name|getProperty
+argument_list|(
+literal|"name"
+argument_list|)
+decl_stmt|;
+name|paths
+operator|.
+name|add
+argument_list|(
+operator|new
+name|PathEntry
+argument_list|(
+name|originName
+argument_list|,
+literal|false
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|paths
+operator|.
+name|add
+argument_list|(
+operator|new
+name|PathEntry
+argument_list|(
+name|ivy
+operator|.
+name|getArchivePathInCache
+argument_list|(
+name|artifact
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 block|}
