@@ -31,6 +31,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|FileInputStream
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -102,6 +112,16 @@ operator|.
 name|util
 operator|.
 name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Properties
 import|;
 end_import
 
@@ -695,16 +715,13 @@ name|artifact
 argument_list|)
 condition|)
 block|{
+name|addPath
+argument_list|(
 name|paths
-operator|.
-name|add
-argument_list|(
-name|ivy
-operator|.
-name|getArchivePathInCache
-argument_list|(
+argument_list|,
 name|artifact
-argument_list|)
+argument_list|,
+name|ivy
 argument_list|)
 expr_stmt|;
 block|}
@@ -712,6 +729,96 @@ block|}
 return|return
 name|paths
 return|;
+block|}
+specifier|protected
+name|void
+name|addPath
+parameter_list|(
+name|List
+name|paths
+parameter_list|,
+name|Artifact
+name|artifact
+parameter_list|,
+name|Ivy
+name|ivy
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|paths
+operator|.
+name|add
+argument_list|(
+operator|new
+name|PathEntry
+argument_list|(
+name|ivy
+operator|.
+name|getArchivePathInCache
+argument_list|(
+name|artifact
+argument_list|)
+argument_list|,
+literal|true
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+specifier|static
+class|class
+name|PathEntry
+block|{
+specifier|private
+name|String
+name|location
+decl_stmt|;
+specifier|private
+name|boolean
+name|relativeToCache
+decl_stmt|;
+specifier|public
+name|PathEntry
+parameter_list|(
+name|String
+name|location
+parameter_list|,
+name|boolean
+name|relativeToCache
+parameter_list|)
+block|{
+name|this
+operator|.
+name|location
+operator|=
+name|location
+expr_stmt|;
+name|this
+operator|.
+name|relativeToCache
+operator|=
+name|relativeToCache
+expr_stmt|;
+block|}
+specifier|public
+name|String
+name|getLocation
+parameter_list|()
+block|{
+return|return
+name|location
+return|;
+block|}
+specifier|public
+name|boolean
+name|isRelativeToCache
+parameter_list|()
+block|{
+return|return
+name|relativeToCache
+return|;
+block|}
 block|}
 block|}
 end_class
